[package]
name = "blog_api"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "blog"

[dependencies]
diesel = { version = "1.4.4", features = ["mysql"] }
actix-rt = "2"
actix-web = "4.0.0-beta.8"
reqwest = "0.11"
serde = "1"
serde_json = "1"
tokio = "1"
